// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when is compact 1`] = `
<ul
  className="src-shared-components-dropdown-menu__menu-compact src-shared-components-dropdown-menu__menu"
  role="menu"
>
  <li
    key="0"
  >
    <DropdownMenuItem
      compact={true}
      index={0}
      item={
        Object {
          "label": "a",
        }
      }
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    />
  </li>
  <li
    key="1"
  >
    <DropdownMenuItem
      compact={true}
      index={1}
      item={
        Object {
          "label": "b",
        }
      }
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={true}
    />
  </li>
</ul>
`;

exports[`should render correctly when is not compact 1`] = `
<ul
  className="src-shared-components-dropdown-menu__menu"
  role="menu"
>
  <li
    key="0"
  >
    <DropdownMenuItem
      compact={false}
      index={0}
      item={
        Object {
          "label": "a",
        }
      }
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={false}
    />
  </li>
  <li
    key="1"
  >
    <DropdownMenuItem
      compact={false}
      index={1}
      item={
        Object {
          "label": "b",
        }
      }
      onClick={[Function]}
      onMouseEnter={[Function]}
      selected={true}
    />
  </li>
</ul>
`;
